welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: value lenght is not a member of Array[Int]
  if (nums.lenght > 3)
           ^